<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundtaikhoan"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/tdm_thaydoiemail"
        android:textColor="@color/orange"
        android:textSize="50sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:autofillHints="emailAddress"
            android:id="@+id/edt_nhapemail"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/tdm_nhapemail"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <Button
            android:id="@+id/tdm_btn_QuayLai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginStart="10dp"
            android:text="@string/tdmk_quaylai"
            android:textColor="@color/orange"
            android:textSize="18sp" />
        <Button
            android:id="@+id/tdm_btn_CapNhat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginStart="50dp"
            android:text="@string/tdmk_capnhat"
            android:textColor="@color/orange"
            android:textSize="18sp" />



    </LinearLayout>

</LinearLayout>