<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".function.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:gravity="bottom|center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/et_TenDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/dn_tendangnhap"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_MatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/dn_matkhau"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="end">

            <EditText
                android:id="@+id/et_QuenMatKhau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_marginEnd="10dp"
                android:text="@string/dn_quenmatkhau"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_DangNhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:text="@string/dn_dangnhap"
            android:textColor="#ffa500"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@string/dn_chuacotaikhoan"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_DangKy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@string/dn_dangky"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>