<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRAdius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="1dp"
                android:gravity="center"
                android:layout_alignParentStart="true">
                <ImageView
                    android:padding="1dp"
                    android:src="@drawable/ic_ttcn_lock"
                    android:contentDescription="@string/img_matkhau"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttcn_matkhau"
                    android:textSize="12sp"
                    android:layout_margin="5dp"
                    android:textStyle="bold|normal"/>
                <ImageView
                    android:padding="1dp"
                    android:src="@drawable/ic_ttcn_setting"
                    android:contentDescription="@string/img_chinhsua"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="160dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttcn_chinhsua"
                    android:textSize="12sp"
                    android:textColor="@color/deep_sky_blue"
                    android:layout_margin="5dp"
                    android:textStyle="bold|normal"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="2dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_ttcn_hovaten1"
                android:contentDescription="@string/img_sora"
                app:tint="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/ttcn_matkhausao"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>