<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRAdius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bxh_iv_anhtruyen"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/bxh_iv_truyen"
            android:scaleType="fitStart"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/bxh_iv_truyen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bxh_tv_truyen"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bxh_iv_tacgia"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bxh_tv_tacgia"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>