<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_centerInParent="true"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerInParent="true">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRAdius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="23dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/ttcn_tv_HoVaTen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/ttcn_levodongdien"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/ttcn_tv_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/gray"
                    android:text="@string/ttcn_gmaillvdd"
                    android:textStyle="normal"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/silver"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/ttcn_tv_ThongTinCaNhan"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ttcn_thongtincanhan"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/silver"/>
                    <TextView
                        android:id="@+id/ttcn_tv_LichSu"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ttcn_lichsu"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="14sp"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/silver"/>
                    <TextView
                        android:id="@+id/ttcn_tv_YeuThich"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ttcn_yeuthich"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="14sp"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/silver"/>
                    <TextView
                        android:id="@+id/ttcn_tv_BinhLuan"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ttcn_binhluan"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:src="@drawable/logo"
        android:background="@color/orange"
        android:padding="5dp"
        android:layout_centerHorizontal="true"/>
    

</RelativeLayout>