<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/backgroundtaikhoan">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:padding="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/img_luive"
                    android:src="@drawable/ic_ttcn_return"/>
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_ttcn_home"
                    android:contentDescription="@string/img_home"
                    android:padding="1dp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_gravity="center"
        layout="@layout/item_thong_tin_tai_khoan"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/item_ho_va_ten"/>
            <include layout="@layout/item_email"/>
            <include layout="@layout/item_mat_khau"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="15sp"
        android:text="@string/ttcn_dangxuat"/>

</LinearLayout>