<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundtaikhoan"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:padding="8dp"
        card_view:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ttcn_img_back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/img_luive"
                android:src="@drawable/ic_ttcn_return" />

            <ImageView
                android:id="@+id/ttcn_img_home"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/img_home"
                android:src="@drawable/ic_ttcn_home" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="165dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRAdius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_bangxephang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/bangxephang"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        android:textStyle="bold|italic" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:background="@color/orange"
            android:padding="5dp"
            android:src="@drawable/logo" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:background="@color/white"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

</LinearLayout>